Tue Sep  2 22:43:52 2014  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_io.rb (test_new_with_block): Set autoclose to avoid
	  EBADF.

Tue Sep  2 22:01:51 2014  Kouhei Sutou  <kou@cozmixng.org>

	* Makefile.in (update-coverage): Remove a never executed line.

Tue Sep  2 19:48:26 2014  Tanaka Akira  <akr@fsij.org>

	* process.c (handle_fork_error): Extracted from retry_fork.

Tue Sep  2 17:02:53 2014  Vit Ondruch  <v.ondruch@tiscali.cz>

	* tool/rbinstall.rb: fixed error of local installation.
	  [Bug #10192][ruby-core:64702]

Tue Sep  2 16:58:03 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/runner.rb: reporting test coverage for test-all with COVERAGE env.
	  [Feature #10189][ruby-core:64681][fix GH-708]
	* Makefile.in: added task for coverage report.
	* common.mk: added definition of forked simplecov url.
	* .gitignore: ignored coverage directory.

Mon Sep  1 20:11:02 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (rbtime2vtdate): try to convert millisecond
	  of Time object to millisecond of VT_DATE VARIANT.
	* test/win32ole/test_win32ole_variant.rb
	  (test_conversion_time2date_with_msec): ditto.

Sun Aug 31 16:58:49 2014  Tanaka Akira  <akr@fsij.org>

	* lib/benchmark.rb: Fix a syntax error.

Sun Aug 31 08:46:44 2014  Eric Wong  <e@80x24.org>

	* ext/zlib/zlib.c (gzfile_reset): preserve ZSTREAM_FLAG_GZFILE
	  [Bug #10101]

	* test/zlib/test_zlib.rb (test_rewind): test each_byte

Sat Aug 30 19:22:47 2014  Eric Wong  <e@80x24.org>

	* symbol.c (rb_sym2id): do not return garbage object

Sat Aug 30 06:39:48 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: fix NameError dumping and
	  loading. Fixes GH #85. Thanks @brentdax for the patch!
	* test/psych/test_exception.rb: test for fix

Sat Aug 30 06:23:40 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb: fix loading strings that